--- a/index.html
+++ b/index.html
@@ -93,11 +93,33 @@
     <section id="about" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>About Grayscale</h2>
-                <p><i class="icon-apache">apple</i> <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
-                <p>This theme features stock photos by <a href="http://gratisography.com/">Gratisography</a> along with a custom Google Maps skin courtesy of <a href="http://snazzymaps.com/">Snazzy Maps</a>.</p>
-                <p>Grayscale includes full HTML, CSS, and custom JavaScript files along with LESS files for easy customization.</p>
+                <h2>About Miran</h2>
+                <p>Full stack web developer specializing in HTML, CSS, JS, NODE, EXPRESS, SQL, REACT. Who is looking for a great company to work for. Has completed LEARN Academy’s full time coding bootcamp. Enjoys  working on a team and independently, very flexible, and enjoys new challenges.</p>
             </div>
+        </div>
+        <br><br>
+        <div class="row languages">
+          <h2>Programming languages<h2>
+            <p><i class="icon-javascript icon"></i> Javascript
+              <i class="icon-html icon"></i> Html
+              <i class="icon-css icon"></i> Css
+              <i class="icon-nodejs icon"></i> Nodejs
+            </p>
+        </div>
+        <br><br>
+        <div class="row frameworks">
+          <h2>Frameworks</h2>
+            <p><i class="icon-bootstrap icon"></i> Bootstrap
+              <i class="icon-jquery icon"></i> Jquery
+              <i class="icon-reactjs icon"></i> Reactjs
+              <i class="icon-postgres-alt icon"></i> Postgres
+        </div>
+        <br><br>
+        <div class="row resources">
+          <h2>Resources<h2>
+            <p><i class="fa fa-github fa-fw icon"></i> Github
+               <i class="icon-codepen icon"></i> Codepen
+               <i class="icon-freecodecamp icon"></i> Freecodecamp
         </div>
     </section>
 
