--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Grayscale - Start Bootstrap Theme</title>
+    <title>Miran Romick</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="./font-mfizz/dist/font-mfizz.css">
 
     <!-- Theme CSS -->
-    <link href="css/grayscale.min.css" rel="stylesheet">
+    <link href="css/grayscale.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -44,7 +44,9 @@
                     Menu <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
-                    <i class="fa fa-play-circle"></i> <span class="light">Start</span> Bootstrap
+                    <!-- <i class="fa fa-play-circle"></i> -->
+                    <!-- <img src="./img/MR-logo.png" alt="logo pic" class="logo"> -->
+                    <span class="light">MR</span>
                 </a>
             </div>
 
@@ -59,7 +61,7 @@
                         <a class="page-scroll" href="#about">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#download">Download</a>
+                        <a class="page-scroll" href="#projects">Projects</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
@@ -77,9 +79,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <h1 class="brand-heading">Grayscale</h1>
-                        <p class="intro-text">A free, responsive, one page Bootstrap theme.
-                            <br>Created by Start Bootstrap.</p>
+                        <h1 class="brand-heading">MIRAN ROMICK</h1>
+                        <p class="intro-text">A Full Stack Web Developer.</p>
                         <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
@@ -94,12 +95,12 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>About Miran</h2>
-                <p>Full stack web developer specializing in HTML, CSS, JS, NODE, EXPRESS, SQL, REACT. Who is looking for a great company to work for. Has completed LEARN Academy’s full time coding bootcamp. Enjoys  working on a team and independently, very flexible, and enjoys new challenges.</p>
+                <p>Full stack web developer specializing in HTML, CSS, JAVASCRIPT, NODE, EXPRESS, SQL, REACT. Who is looking for a great company to work for. Has completed LEARN Academy’s full time coding bootcamp. Enjoys  working on a team and independently, very flexible, and enjoys new challenges.</p>
             </div>
         </div>
         <br><br>
         <div class="row languages">
-          <h2>Programming languages<h2>
+          <h2>Programming languages</h2>
             <p><i class="icon-javascript icon"></i> Javascript
               <i class="icon-html icon"></i> Html
               <i class="icon-css icon"></i> Css
@@ -113,24 +114,26 @@
               <i class="icon-jquery icon"></i> Jquery
               <i class="icon-reactjs icon"></i> Reactjs
               <i class="icon-postgres-alt icon"></i> Postgres
+            </p>
         </div>
         <br><br>
         <div class="row resources">
-          <h2>Resources<h2>
+          <h2>Resources</h2>
             <p><i class="fa fa-github fa-fw icon"></i> Github
                <i class="icon-codepen icon"></i> Codepen
                <i class="icon-freecodecamp icon"></i> Freecodecamp
+            </p>
         </div>
     </section>
 
-    <!-- Download Section -->
-    <section id="download" class="content-section text-center">
-        <div class="download-section">
+    <!-- projects Section -->
+    <section id="projects" class="content-section text-center">
+        <div class="projects-section">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <h2>Download Grayscale</h2>
-                    <p>You can download Grayscale for free on the preview page at Start Bootstrap.</p>
-                    <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Visit Download Page</a>
+                    <h2>projects Grayscale</h2>
+                    <p>You can projects Grayscale for free on the preview page at Start Bootstrap.</p>
+                    <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Visit projects Page</a>
                 </div>
             </div>
         </div>
