--- a/index.html
+++ b/index.html
@@ -3,189 +3,195 @@
 
 <head>
 
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="">
+  <meta name="author" content="">
 
-    <title>Miran Romick</title>
+  <title>Miran Romick</title>
 
-    <!-- Bootstrap Core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
+  <!-- Bootstrap Core CSS -->
+  <link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
 
-    <!-- Custom Fonts -->
-    <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+  <!-- Custom Fonts -->
+  <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
 
-<!--     ICONS SETUP     -->
-    <link rel="stylesheet" href="./font-mfizz/dist/font-mfizz.css">
+  <!--     ICONS SETUP     -->
+  <link rel="stylesheet" href="./font-mfizz/dist/font-mfizz.css">
 
-    <!-- Theme CSS -->
-    <link href="css/grayscale.css" rel="stylesheet">
+  <!-- Theme CSS -->
+  <link href="css/grayscale.css" rel="stylesheet">
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
+  <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+  <!--[if lt IE 9]>
+  <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+  <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+  <![endif]-->
 
 </head>
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 
-    <!-- Navigation -->
-    <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
-                    Menu <i class="fa fa-bars"></i>
-                </button>
-                <a class="navbar-brand page-scroll" href="#page-top">
-                    <!-- <i class="fa fa-play-circle"></i> -->
-                    <!-- <img src="./img/MR-logo.png" alt="logo pic" class="logo"> -->
-                    <span class="light">MR</span>
-                </a>
-            </div>
+  <!-- Navigation -->
+  <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
+          Menu <i class="fa fa-bars"></i>
+        </button>
+        <a class="navbar-brand page-scroll" href="#page-top">
+          <!-- <i class="fa fa-play-circle"></i> -->
+          <!-- <img src="./img/MR-logo.png" alt="logo pic" class="logo"> -->
+          <span class="light">MR</span>
+        </a>
+      </div>
 
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
-                <ul class="nav navbar-nav">
-                    <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
-                    <li class="hidden">
-                        <a href="#page-top"></a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#about">About</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#projects">Projects</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
-                    </li>
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container -->
-    </nav>
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
+        <ul class="nav navbar-nav">
+          <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
+          <li class="hidden">
+            <a href="#page-top"></a>
+          </li>
+          <li>
+            <a class="page-scroll" href="#about">About</a>
+          </li>
+          <li>
+            <a class="page-scroll" href="#projects">Projects</a>
+          </li>
+          <li>
+            <a class="page-scroll" href="#contact">Contact</a>
+          </li>
+        </ul>
+      </div>
+      <!-- /.navbar-collapse -->
+    </div>
+    <!-- /.container -->
+  </nav>
 
-    <!-- Intro Header -->
-    <header class="intro">
-        <div class="intro-body">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-8 col-md-offset-2">
-                        <h1 class="brand-heading">MIRAN ROMICK</h1>
-                        <p class="intro-text">A Full Stack Web Developer.</p>
-                        <a href="#about" class="btn btn-circle page-scroll">
-                            <i class="fa fa-angle-double-down animated"></i>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </header>
-
-    <!-- About Section -->
-    <section id="about" class="container content-section text-center">
+  <!-- Intro Header -->
+  <header class="intro">
+    <div class="intro-body">
+      <div class="container">
         <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
-                <h2>About Miran</h2>
-                <p>Full stack web developer specializing in HTML, CSS, JAVASCRIPT, NODE, EXPRESS, SQL, REACT. Who is looking for a great company to work for. Has completed LEARN Academy’s full time coding bootcamp. Enjoys  working on a team and independently, very flexible, and enjoys new challenges.</p>
-            </div>
+          <div class="col-md-8 col-md-offset-2">
+            <h1 class="brand-heading">MIRAN ROMICK</h1>
+            <p class="intro-text">A Full Stack Web Developer.</p>
+            <a href="#about" class="btn btn-circle page-scroll">
+              <i class="fa fa-angle-double-down animated"></i>
+            </a>
+          </div>
         </div>
-        <br><br>
-        <div class="row languages">
-          <h2>Programming languages</h2>
-            <p><i class="icon-javascript icon"></i> Javascript
-              <i class="icon-html icon"></i> Html
-              <i class="icon-css icon"></i> Css
-              <i class="icon-nodejs icon"></i> Nodejs
-            </p>
-        </div>
-        <br><br>
-        <div class="row frameworks">
-          <h2>Frameworks</h2>
-            <p><i class="icon-bootstrap icon"></i> Bootstrap
-              <i class="icon-jquery icon"></i> Jquery
-              <i class="icon-reactjs icon"></i> Reactjs
-              <i class="icon-postgres-alt icon"></i> Postgres
-            </p>
-        </div>
-        <br><br>
-        <div class="row resources">
-          <h2>Resources</h2>
-            <p><i class="fa fa-github fa-fw icon"></i> Github
-               <i class="icon-codepen icon"></i> Codepen
-               <i class="icon-freecodecamp icon"></i> Freecodecamp
-            </p>
-        </div>
-    </section>
+      </div>
+    </div>
+  </header>
 
-    <!-- projects Section -->
-    <section id="projects" class="content-section text-center">
-        <div class="projects-section">
-            <div class="container">
-                <div class="col-lg-8 col-lg-offset-2">
-                    <h2>projects Grayscale</h2>
-                    <p>You can projects Grayscale for free on the preview page at Start Bootstrap.</p>
-                    <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Visit projects Page</a>
-                </div>
-            </div>
-        </div>
-    </section>
+  <!-- About Section -->
+  <section id="about" class="container content-section text-center">
+    <div class="row">
+      <div class="col-lg-8 col-lg-offset-2">
+        <h2>About Miran</h2>
+        <p>Full stack web developer specializing in HTML, CSS, JAVASCRIPT, NODE, EXPRESS, SQL, REACT. Who is looking for a great company to work for. Has completed LEARN Academy’s full time coding bootcamp. Enjoys  working on a team and independently, very flexible, and enjoys new challenges.</p>
+      </div>
+    </div>
+    <br><br>
+    <div class="row languages">
+      <h2>Programming languages</h2>
+      <p><i class="icon-javascript icon"></i> Javascript
+        <i class="icon-html icon"></i> Html
+        <i class="icon-css icon"></i> Css
+        <i class="icon-nodejs icon"></i> Nodejs
+      </p>
+    </div>
+    <br><br>
+    <div class="row frameworks">
+      <h2>Frameworks</h2>
+      <p><i class="icon-bootstrap icon"></i> Bootstrap
+        <i class="icon-jquery icon"></i> Jquery
+        <i class="icon-reactjs icon"></i> Reactjs
+        <i class="icon-postgres-alt icon"></i> Postgres
+      </p>
+    </div>
+    <br><br>
+    <div class="row resources">
+      <h2>Resources</h2>
+      <p><i class="fa fa-github fa-fw icon"></i> Github
+        <i class="icon-codepen icon"></i> Codepen
+        <i class="icon-freecodecamp icon"></i> Freecodecamp
+      </p>
+    </div>
+  </section>
 
-    <!-- Contact Section -->
-    <section id="contact" class="container content-section text-center">
+  <!-- projects Section -->
+  <section id="projects" class="content-section text-center">
+    <div class="projects-section">
+      <div class="container">
         <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
-                <h2>Contact Start Bootstrap</h2>
-                <p>Feel free to email us to provide some feedback on our templates, give us suggestions for new templates and themes, or to just say hello!</p>
-                <p><a href="mailto:feedback@startbootstrap.com">feedback@startbootstrap.com</a>
-                </p>
-                <ul class="list-inline banner-social-buttons">
-                    <li>
-                        <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
-                    </li>
-                    <li>
-                        <a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
-                    </li>
-                    <li>
-                        <a href="https://plus.google.com/+Startbootstrap/posts" class="btn btn-default btn-lg"><i class="fa fa-google-plus fa-fw"></i> <span class="network-name">Google+</span></a>
-                    </li>
-                </ul>
-            </div>
+          <h2>Projects</h2>
         </div>
-    </section>
+        <div class="row">
+          <ul class="list-inline">
+            <li id="carsim"><a href="" 
 
-    <!-- Map Section -->
-    <div id="map"></div>
-
-    <!-- Footer -->
-    <footer>
-        <div class="container text-center">
-            <p>Copyright &copy; Your Website 2016</p>
         </div>
-    </footer>
+      </div>
+      <!-- <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Visit projects Page</a> -->
+      <!-- </div> -->
+    </div>
+  </div>
+</section>
 
-    <!-- jQuery -->
-    <script src="vendor/jquery/jquery.js"></script>
+<!-- Contact Section -->
+<section id="contact" class="container content-section text-center">
+  <div class="row">
+    <div class="col-lg-8 col-lg-offset-2">
+      <h2>Contact Start Bootstrap</h2>
+      <p>Feel free to email us to provide some feedback on our templates, give us suggestions for new templates and themes, or to just say hello!</p>
+      <p><a href="mailto:feedback@startbootstrap.com">feedback@startbootstrap.com</a>
+      </p>
+      <ul class="list-inline banner-social-buttons">
+        <li>
+          <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
+        </li>
+        <li>
+          <a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
+        </li>
+        <li>
+          <a href="https://plus.google.com/+Startbootstrap/posts" class="btn btn-default btn-lg"><i class="fa fa-google-plus fa-fw"></i> <span class="network-name">Google+</span></a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</section>
 
-    <!-- Bootstrap Core JavaScript -->
-    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+<!-- Map Section -->
+<div id="map"></div>
 
-    <!-- Plugin JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+<!-- Footer -->
+<footer>
+  <div class="container text-center">
+    <p>Copyright &copy; Your Website 2016</p>
+  </div>
+</footer>
 
-    <!-- Google Maps API Key - Use your own API key to enable the map feature. More information on the Google Maps API can be found at https://developers.google.com/maps/ -->
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRngKslUGJTlibkQ3FkfTxj3Xss1UlZDA&sensor=false"></script>
+<!-- jQuery -->
+<script src="vendor/jquery/jquery.js"></script>
 
-    <!-- Theme JavaScript -->
-    <script src="js/grayscale.min.js"></script>
+<!-- Bootstrap Core JavaScript -->
+<script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+
+<!-- Plugin JavaScript -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+
+<!-- Google Maps API Key - Use your own API key to enable the map feature. More information on the Google Maps API can be found at https://developers.google.com/maps/ -->
+<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRngKslUGJTlibkQ3FkfTxj3Xss1UlZDA&sensor=false"></script>
+
+<!-- Theme JavaScript -->
+<script src="js/grayscale.js"></script>
 
 </body>
 
